# solr-bootstrap

./: pyproject.toml
solr_bootstrap/: TESTING.ipynb  main.py  vehicles.json
