[tool.poetry]
name = "solr-bootstrap"
version = "0.1.0"
description = "Program to bootstrap solr collections with retry and monitoring for completion"
authors = ["Chris Birch <datapointchris@gmail.com>"]
readme = "README.md"
packages = [{include = "solr_bootstrap"}]

[tool.poetry.dependencies]
python = "3.10.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"
ipywidgets = "^8.0.4"
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
tools = {git = "https://github.com/datapointchris/tools.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
